# postgresql-experiments

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  run-sql.sh  seed_data.py  setup.sh  setup_cron.sql  setup_db_indices.sql  setup_partitioning.sql  setup_tables.sql
docker/db/: Dockerfile
docker/pgadmin/: servers.json
